<resources>
    <string name="app_name">MetaWear Android Starter</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please wait</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="start_temperature">Start Temperature</string>
    <string name="start_acceleration">Start Accelerometer</string>
    <string name="textview">TextView</string>
    <string name="start_gyroscope">Start Gyroscope</string>
    <string name="start_barometer">Start Barometer</string>
    <string name="start_ambient_light">Start Ambient Light</string>
    <string name="sensor_fusion">Sensor Fusion</string>
    <string name="start_magnetometer">Start Magnetometer</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="barometer">Barometer</string>
    <string name="temperature">Temperature</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="ambient_light">Ambient Light</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="quaternion">Quaternion</string>
    <string name="sensor_fusion_linear_acceleration">Sensor Fusion: Linear Acceleration</string>
    <string name="sensor_fusion_quaternion">Sensor Fusion: Quaternion</string>
    <string name="settings">Settings</string>

</resources>
