<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DeviceSetupActivityFragment"
    tools:showIn="@layout/activity_device_setup">

    <ImageButton
        android:id="@+id/acc_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accelerometer"
        android:src="@drawable/ic_screen_rotation_black_24dp"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <ImageButton
        android:id="@+id/temp_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/temperature"
        android:src="@drawable/ic_thermometer"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <ImageButton
        android:id="@+id/gryo_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gyroscope"
        android:src="@drawable/ic_axis_24"
        android:text="@string/start_gyroscope"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <ImageButton
        android:id="@+id/baro_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/barometer"
        android:src="@drawable/pressure_24_white"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <ImageButton

        android:id="@+id/ambi_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ambient_light"
        android:src="@drawable/ic_brightness_medium_black_24dp"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <ImageButton

        android:id="@+id/magnetometer_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/magnetometer"
        android:src="@drawable/ic_magnet_24dp"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>

    <Button

        android:id="@+id/sensorFusion_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sensor_fusion"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:background="@drawable/green_button"/>


    <Button
        android:id="@+id/acc_stop"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@drawable/grey_button"/>

    <!--<Button

        android:id="@+id/placeHolder"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@drawable/grey_button"/>
!-->
    <ImageButton

        android:id="@+id/setting"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings_black_24dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"/>


</LinearLayout>